# semitone-api

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  check-style.sh  fly.toml  plan-chatgpt.md  plan-claude.md  plan.md  pylintrc  pyproject.toml
.github/workflows/: fly-deploy.yml  style.yml  tag-release.yml  test.yml
semitone_api/: exceptions.py  main.py  models.py
semitone_api/routers/: scales.py
tests/: test_errors.py  test_root_spelling.py  test_scales.py
