[tool.poetry]
name = "semitone-api"
version = "0.1.0"
description = "A FastAPI application for Semitone"
authors = ["mbdeaton"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
semitone = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.backend"