[project]
name = "semitone-api"
version = "0.1.0"
description = "A FastAPI application for Semitone"
authors = [
    { name = "mbdeaton" }
]
requires-python = ">=3.7,<4.0"

dependencies = [
    "fastapi>=0.68.0,<1.0.0",
    "uvicorn>=0.15.0,<1.0.0",
    "semitone"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"