[project]
name = "semitone-api"
version = "0.1.0"
description = "A FastAPI microservice exposing the semitone Python package"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Brett Deaton", email = "brett.deaton@gmail.com" }
]
keywords = ["music theory", "scale", "chord", "frequency", "api", "fastapi", "semitone"]
dependencies = [
    "fastapi>=0.68.0,<1.0.0",
    "uvicorn>=0.15.0,<1.0.0",
    "semitone (>=0.7.0,<0.8.0)",
]

[project.urls]
Repository = "https://github.com/mbdeaton/semitone-api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.4"
mypy = "^1.8.0"
black = "^24.2.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"